# Fraud_Detection_v2.0

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_VERIFICATION.md  GITHUB_READY.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  test_model.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
api/: main.py
configs/: config.yaml
deploy/: docker-compose.yml  dockerfile
docs/website/: index.html
examples/: quickstart.py
logs/: monitoring_report_20260304_202247.json
models/: fraud_detection_model.pkl
pipelines/: training_pipeline.py
src/data/: loaders.py  validators.py
src/explainability/: explainer.py
src/features/: graph_features.py
src/models/anomaly/: autoencoder.py  vae.py
src/models/deep_learning/: tabnet.py  transformers.py
src/monitoring/: drift_detector.py
src/privacy/: federated_learning.py
tests/unit/: test_data.py
