[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-fraud-detection"
version = "2.0.0"
description = "Advanced AI/ML-based Financial Fraud Detection Platform with Deep Learning, Real-time Streaming, and Privacy-Preserving Capabilities"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
deep-learning = [
    "torch>=2.0.0",
    "tensorflow>=2.13.0",
    "torch-geometric>=2.4.0",
]
streaming = [
    "kafka-python>=2.0.2",
    "redis>=5.0.0",
]
privacy = [
    "flwr>=1.6.0",
    "opacus>=1.4.0",
    "tenseal>=0.3.10",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
monitoring = [
    "mlflow>=2.9.0",
    "evidently>=0.4.0",
    "prometheus-client>=0.19.0",
]
all = [
    "torch>=2.0.0",
    "tensorflow>=2.13.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "kafka-python>=2.0.2",
    "redis>=5.0.0",
    "flwr>=1.6.0",
    "opacus>=1.4.0",
    "fastapi>=0.104.0",
    "mlflow>=2.9.0",
    "shap>=0.43.0",
]

[project.scripts]
fraud-detect = "src.cli:main"
train-model = "pipelines.training_pipeline:main"
serve-api = "api.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*", "pipelines*", "streaming*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
